# SPO_lab1_5

./: CMakeLists.txt  main.c
client/: client_linux.c  client_linux.h
json/: json_deserialization_module.c  json_deserialization_module.h  json_serialization_module.c  json_serialization_module.h
server/: server_linux.c  server_linux.h
sql_grammar/: sql_grammar.yacc  y.tab.c  y.tab.h
sql_lexical_analyzer/: lex.yy.c  lex.yy.h  sql_lexer.lex
table_storage/: storage.c  storage.h
